--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,18 @@ buildscript {
 
 apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
+apply plugin: 'maven'
 
-group = 'com.unitedtraders.logging.logback'
-version '1.0-SNAPSHOT'
+group 'com.unitedtraders.logging.logback'
+version '1.0.0-SNAPSHOT'
+
+ext {
+    publishedGroupId = 'com.unitedtraders.logging.logback'
+    nexusUrl = ''
+    nexusUser = ''
+    nexusPassword = ''
+}
+
 
 repositories {
     mavenCentral()
@@ -58,4 +67,39 @@ publishing {
             artifact tasks.sourceJar
         }
     }
+}
+
+configurations {
+    oneLib
+}
+
+artifacts {
+    oneLib file("./build/libs/${project.name}-${version}.jar")
+    oneLib file("./build/libs/${project.name}-${version}-sources.jar")
+}
+
+project.tasks.create('uploadToNexus', Upload.class) {
+
+    configuration = configurations.oneLib
+
+    repositories {
+
+        mavenDeployer {
+
+            repository(url: "${nexusUrl}") {
+
+                authentication(userName: "${nexusUser}", password: "${nexusPassword}")
+
+            }
+
+            pom.version = "${version}"
+
+            pom.artifactId = "${project.name}"
+
+            pom.groupId = "${publishedGroupId}"
+
+        }
+
+    }
+
 }
