--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 
 buildscript {
-    ext.kotlin_version = '1.3.40'
+    ext.kotlin_version = '1.3.50'
 
     repositories {
         mavenCentral()
@@ -52,8 +52,8 @@ afterEvaluate { project ->
     }
 }
 
-task sourceJar(type: Jar) {
-    classifier 'sources'
+task sourceJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
     from sourceSets.main.allSource
 }
 
@@ -75,7 +75,7 @@ configurations {
 
 artifacts {
     oneLib file("./build/libs/${project.name}-${version}.jar")
-    oneLib file("./build/libs/${project.name}-${version}-sources.jar")
+    archives sourceJar
 }
 
 project.tasks.create('uploadToNexus', Upload.class) {
